--- a/ansible-cookbooks/postgres-etcd/roles/confd/templates/haproxy.tmpl.j2
+++ b/ansible-cookbooks/postgres-etcd/roles/confd/templates/haproxy.tmpl.j2
@@ -21,15 +21,15 @@ defaults
 
 listen stats
     mode http
-    bind {{ hostvars[inventory_hostname]['inventory_hostname'] }}:{{ haproxy_listen_port.stats }}
+    bind {{ hostvars[inventory_hostname]['inventory_hostname'] }}:7000
     stats enable
     stats uri /
 
 listen master
 {% if cluster_vip is defined and cluster_vip | length > 0 %}
-    bind {{ cluster_vip }}:{{ haproxy_listen_port.master }}
+    bind {{ cluster_vip }}:5000
 {% else %}
-    bind {{ hostvars[inventory_hostname]['inventory_hostname'] }}:{{ haproxy_listen_port.master }}
+    bind {{ hostvars[inventory_hostname]['inventory_hostname'] }}:5000
 {% endif %}
     maxconn {{ haproxy_maxconn.master }}
     option tcplog
@@ -48,9 +48,9 @@ listen master
 
 listen replicas
 {% if cluster_vip is defined and cluster_vip | length > 0 %}
-    bind {{ cluster_vip }}:{{ haproxy_listen_port.replicas }}
+    bind {{ cluster_vip }}:5001
 {% else %}
-    bind {{ hostvars[inventory_hostname]['inventory_hostname'] }}:{{ haproxy_listen_port.replicas }}
+    bind {{ hostvars[inventory_hostname]['inventory_hostname'] }}:5001
 {% endif %}
     maxconn {{ haproxy_maxconn.replica }}
     option tcplog
@@ -70,9 +70,9 @@ listen replicas
 
 listen replicas_sync
 {% if cluster_vip is defined and cluster_vip | length > 0 %}
-    bind {{ cluster_vip }}:{{ haproxy_listen_port.replicas_sync }}
+    bind {{ cluster_vip }}:5002
 {% else %}
-    bind {{ hostvars[inventory_hostname]['inventory_hostname'] }}:{{ haproxy_listen_port.replicas_sync }}
+    bind {{ hostvars[inventory_hostname]['inventory_hostname'] }}:5002
 {% endif %}
     maxconn {{ haproxy_maxconn.replica }}
     option tcplog
@@ -92,9 +92,9 @@ listen replicas_sync
 
 listen replicas_async
 {% if cluster_vip is defined and cluster_vip | length > 0 %}
-    bind {{ cluster_vip }}:{{ haproxy_listen_port.replicas_async }}
+    bind {{ cluster_vip }}:5003
 {% else %}
-    bind {{ hostvars[inventory_hostname]['inventory_hostname'] }}:{{ haproxy_listen_port.replicas_async }}
+    bind {{ hostvars[inventory_hostname]['inventory_hostname'] }}:5003
 {% endif %}
     maxconn {{ haproxy_maxconn.replica }}
     option tcplog
