--- a/ansible-cookbooks/postgres-etcd/roles/pgbouncer/templates/pgbouncer.ini.j2
+++ b/ansible-cookbooks/postgres-etcd/roles/pgbouncer/templates/pgbouncer.ini.j2
@@ -15,11 +15,11 @@ listen_addr = {{ hostvars[inventory_hostname]['inventory_hostname'] }}
 {% endif %}
 listen_port = {{ pgbouncer_listen_port | default(6432) }}
 unix_socket_dir = /var/run/postgresql
-auth_type = md5
+auth_type = {{ pgbouncer_auth_type }}
 auth_file = /etc/pgbouncer/userlist.txt
 admin_users = postgres
 ignore_startup_parameters = extra_float_digits,geqo
- 
+
 pool_mode = {{ pgbouncer_default_pool_mode }}
 server_reset_query = DISCARD ALL
 max_client_conn = {{ pgbouncer_max_client_conn }}
@@ -33,4 +33,4 @@ listen_backlog = 4096
 log_connections = 0
 log_disconnections = 0
 
-# Documentation https://pgbouncer.github.io/config.html 
+# Documentation https://pgbouncer.github.io/config.html
