--- a/ansible-cookbooks/kafka-zookeeper/roles/zookeeper/templates/myid.j2
+++ b/ansible-cookbooks/kafka-zookeeper/roles/zookeeper/templates/myid.j2
@@ -1,5 +1,1 @@
-{%- if sansible_zookeeper_aws_cluster_assigned_id is defined -%}
-{{ sansible_zookeeper_aws_cluster_assigned_id }}
-{%- else -%}
-{{ broker_id }}
-{%- endif -%}
+{{ hostvars[inventory_hostname]['id'] }}
