--- a/ansible-cookbooks/kafka-zookeeper/roles/kafka/templates/kafka.service.j2
+++ b/ansible-cookbooks/kafka-zookeeper/roles/kafka/templates/kafka.service.j2
@@ -4,8 +4,8 @@ After=network.target network-online.target remote-fs.target
 
 [Service]
 Type=simple
-User=kafka
-Group=kafka
+User=root
+Group=root
 EnvironmentFile=-/home/{{ sansible_kafka_user }}/etc/environment
 ExecStart=/home/{{ sansible_kafka_user }}/kafka/bin/kafka-server-start.sh /home/{{ sansible_kafka_user }}/kafka/config/server.properties
 ExecStop=/home/{{ sansible_kafka_user }}/kafka/bin/kafka-server-stop.sh
