--- a/ansible-cookbooks/kafka-zookeeper/roles/zookeeper/templates/zookeeper.service.j2
+++ b/ansible-cookbooks/kafka-zookeeper/roles/zookeeper/templates/zookeeper.service.j2
@@ -7,8 +7,8 @@ After=network.target
 [Service]
 Type=forking
 WorkingDirectory=/home/zookeeper
-User=zookeeper
-Group=zookeeper
+User=root
+Group=root
 ExecStart=/home/zookeeper/zookeeper/bin/zkServer.sh start /home/zookeeper/conf/zoo.cfg
 ExecStop=/home/zookeeper/zookeeper/bin/zkServer.sh stop /home/zookeeper/conf/zoo.cfg
 ExecReload=/home/zookeeper/zookeeper/bin/zkServer.sh restart /home/zookeeper/conf/zoo.cfg
